# py-cqrs-ddd-auth

./: .coveragerc  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: IMPLEMENTATION_NOTES.md  authentication_implementation_proposal.md
src/cqrs_ddd_auth/: __init__.py  context.py  ddd.py  event_store.py  factory.py  identity.py  undo.py
src/cqrs_ddd_auth/adapters/: __init__.py  abac.py  keycloak.py  keycloak_admin.py  otp.py  repositories.py  tokens.py
src/cqrs_ddd_auth/application/: __init__.py  commands.py  event_handlers.py  handlers.py  queries.py  results.py  sagas.py  stateless.py  sync_commands.py
src/cqrs_ddd_auth/contrib/: __init__.py  dependency_injector.py  django.py  fastapi.py  pydantic.py
src/cqrs_ddd_auth/contrib/django/: __init__.py  decorators.py  mail.py  middleware.py  sms.py  views.py
src/cqrs_ddd_auth/contrib/fastapi/: __init__.py  dependencies.py  exception_handlers.py  mail.py  middleware.py  router.py  sms.py
src/cqrs_ddd_auth/contrib/search_query_dsl/: __init__.py  converter.py  filter.py
src/cqrs_ddd_auth/contrib/stateful_abac/: __init__.py  adapter.py
src/cqrs_ddd_auth/domain/: __init__.py  aggregates.py  errors.py  events.py  value_objects.py
src/cqrs_ddd_auth/infrastructure/adapters/: __init__.py  communication.py  elevation.py  keycloak.py  keycloak_admin.py  otp.py  otp_storage.py  rbac.py  session.py  sqlalchemy_storage.py  tokens.py
src/cqrs_ddd_auth/infrastructure/persistence/: sqlalchemy_event_store.py
src/cqrs_ddd_auth/infrastructure/ports/: __init__.py  authorization.py  communication.py  elevation.py  identity_provider.py  identity_provider_admin.py  otp.py  session.py
src/cqrs_ddd_auth/middleware/: __init__.py  authorization.py
src/cqrs_ddd_auth/ports/: __init__.py  authorization.py  communication.py  identity_provider.py  identity_provider_admin.py  otp.py  session.py
src/cqrs_ddd_auth/refresh/: __init__.py  adapter.py  middleware.py
tests/: __init__.py  conftest.py  test_factory.py  test_identity_coverage.py
tests/application/: test_auth_optimization.py  test_event_sagas_coverage.py  test_handlers.py  test_handlers_errors.py  test_otp_endpoints_flow.py  test_queries.py  test_results.py  test_step_up.py  test_user_management.py
tests/contrib/: test_fastapi_middleware.py  test_fastapi_router.py  test_search_query_converter.py  test_stateful_abac.py
tests/contrib/django/: conftest.py  test_middleware.py  test_views.py
tests/contrib/fastapi/: test_dependencies_coverage.py  test_middleware_coverage.py
tests/domain/: test_aggregates.py  test_aggregates_coverage.py  test_errors.py  test_events_coverage.py  test_value_objects.py
tests/infrastructure/: test_bulker_sms.py  test_communication.py  test_django_mail.py  test_elevation_adapters.py  test_fastapi_mail.py  test_full_coverage_adapters.py  test_in_memory_session.py  test_keycloak_adapter.py  test_keycloak_admin.py  test_keycloak_session_adapter.py  test_otp_adapters.py  test_otp_implementations.py  test_otp_services.py  test_otp_sqlalchemy_coverage.py  test_otp_storage.py  test_rbac.py  test_rbac_adapter.py  test_redis_adapter.py  test_refresh_adapter.py  test_session_adapter.py  test_session_adapter_coverage.py
tests/middleware/: test_authorization.py
tests/refresh/: test_base_middleware.py
