[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-cqrs-ddd-auth"
version = "0.1.0"
description = "A toolkit-native authentication and authorization library built using CQRS, DDD, and Saga patterns"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Myron Gourlis" }
]
keywords = ["authentication", "authorization", "cqrs", "ddd", "keycloak", "oauth2", "jwt", "2fa", "abac"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Typing :: Typed",
]

# Core dependency: the CQRS/DDD toolkit
dependencies = [
    "py-cqrs-ddd-toolkit>=0.1.0",
]

[project.optional-dependencies]
keycloak = [
    "python-keycloak>=3.0.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.25",
]
fastapi = [
    "fastapi>=0.100",
    "pydantic>=2.0",
]
django = [
    "django>=4.2",
]
abac = [
    "stateful-abac-sdk>=0.1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "mypy>=1.0",
    "httpx>=0.25",
]
all = [
    "py-cqrs-ddd-auth[keycloak,fastapi,django,abac,dev]",
]

[project.urls]
Homepage = "https://github.com/mgourlis/py-cqrs-ddd-auth"
Documentation = "https://github.com/mgourlis/py-cqrs-ddd-auth#readme"
Repository = "https://github.com/mgourlis/py-cqrs-ddd-auth"

[tool.hatch.build.targets.wheel]
packages = ["src/cqrs_ddd_auth"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/cqrs_ddd_auth --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
